--- a/style.css
+++ b/style.css
@@ -2,6 +2,20 @@ body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.container-btns {
+    max-width: 1400px;
+    max-height: 500px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 #green {
@@ -16,11 +30,15 @@ body {
     background-color: blue;
 }
 
-button {
-    padding: 5px 20px;
+.button {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: white;
     border: 1px solid black;
     border-radius: 5px;
+    flex-basis: 45%;
 }
 
 #random {
