--- a/style.css
+++ b/style.css
@@ -6,16 +6,18 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
-.container-btns {
+.container {
     max-width: 1400px;
-    max-height: 500px;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
+    text-align: center;
+}
+
+h1 {
+    margin-top: 0;
+    font-size: 5rem;
 }
 
 #green {
@@ -31,14 +33,14 @@ body {
 }
 
 .button {
-    height: 50px;
+    padding: 30px 100px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
     border: 1px solid black;
     border-radius: 5px;
-    flex-basis: 45%;
+    margin-bottom: 20px;
 }
 
 #random {
