--- a/style.css
+++ b/style.css
@@ -1,49 +1,24 @@
 body {
-    box-sizing: border-box;
-    padding: 0;
+    background-color: rgb(78, 78, 78);
     margin: 0;
-    width: 100vw;
+    padding: 0;
+    box-sizing: border-box;
     height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 .container {
-    max-width: 1400px;
-    text-align: center;
+    background-color: rgb(216, 216, 216);
+    padding: 50px;
+    border-radius: 10px;
 }
 
-h1 {
-    margin-top: 0;
-    font-size: 5rem;
-}
-
-#green {
-    background-color: green;
-}
-
-#red {
-    background-color: red;
-}
-
-#blue {
-    background-color: blue;
-}
-
-.button {
-    padding: 30px 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    border: 1px solid black;
+input {
+    margin-right: 10px;
     border-radius: 5px;
-    margin-bottom: 20px;
 }
 
-#random {
-    color: black;
-    background-color: white;
+#result {
+    text-align: center;
 }
