Refactor project structure: rename styles, update HTML files, and create new palindrome view

--- a/styles/palindrome.css
+++ b/styles/palindrome.css
@@ -22,3 +22,9 @@ input {
 #result {
     text-align: center;
 }
+
+@media screen and (max-width: 580px) {
+    .container {
+        margin: 0 10px;
+    }
+}
