Update navigation links and improve layout for palindrome and flipper views

--- a/styles/palindrome.css
+++ b/styles/palindrome.css
@@ -4,8 +4,12 @@ body {
     padding: 0;
     box-sizing: border-box;
     height: 100vh;
+}
+
+.palindrome {
     display: flex;
     align-items: center;
+    height: 80vh;
 }
 
 .container {
