--- a/styles/flipper.css
+++ b/styles/flipper.css
@@ -5,10 +5,15 @@ body {
     background-color: olive;
     width: 100vw;
     height: 100vh;
+
+}
+
+.flipper {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 80vh;
 }
 
 .container {
@@ -46,10 +51,12 @@ h1 {
 
 .left {
     justify-content: end;
+    padding-right: 0;
 }
 
 .right {
     justify-content: start;
+    padding-left: 0;
 }
 
 .button {
@@ -79,6 +86,7 @@ h1 {
     .button {
         height: 150px;
         width: 150px;
+        margin: 10px;
     }
 }
 
@@ -87,5 +95,6 @@ h1 {
     .button {
         height: 100px;
         width: 100px;
+        margin: 10px;
     }
 }
