--- a/views/flipper.html
+++ b/views/flipper.html
@@ -4,26 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Projects</title>
+    <title>Flipper</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/flipper.css">
 </head>
 
 <body>
-
-    <div class="container">
-        <h1>Color Flipper</h1>
-        <div class="row">
-            <div class="col left">
-                <div class="button" type="button" id="green"><Strong>Green</Strong></div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/dordo-dekanovic/">Linkedin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/GiorgioDordo">Github</a>
+                    </li>
+                </ul>
             </div>
-            <div class="col right">
-                <div class="button" type="button" id="red"><strong>Red</strong></div>
-            </div>
-            <div class="col left">
-                <div class="button" type="button" id="blue"><strong>Blue</strong></div>
-            </div>
-            <div class="col right">
-                <div class="button" type="button" id="random"><strong>Random</strong></div>
+        </div>
+    </nav>
+    <div class="flipper">
+        <div class="container">
+            <h1>Color Flipper</h1>
+            <div class="row">
+                <div class="col left">
+                    <div class="button" type="button" id="green"><Strong>Green</Strong></div>
+                </div>
+                <div class="col right">
+                    <div class="button" type="button" id="red"><strong>Red</strong></div>
+                </div>
+                <div class="col left">
+                    <div class="button" type="button" id="blue"><strong>Blue</strong></div>
+                </div>
+                <div class="col right">
+                    <div class="button" type="button" id="random"><strong>Random</strong></div>
+                </div>
             </div>
         </div>
     </div>
