--- a/views/palindrome.html
+++ b/views/palindrome.html
@@ -11,15 +11,37 @@
 </head>
 
 <body>
-    <div class="container d-flex flex-column align-items-center">
-        <h1 class="mb-4 text-center">PALINDROME CHECKER</h1>
-        <div class="mb-4">
-            <input class="form-control" id="input" type="text" placeholder="type a word">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/dordo-dekanovic/">Linkedin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/GiorgioDordo">Github</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <button class="btn btn-primary px-3 mb-4" onclick="check()">Check it</button>
-        <div id="result"></div>
-        </p>
-        <script src="/styles/palindrome.css"></script>
+    </nav>
+
+    <div class="palindrome">
+        <div class="container d-flex flex-column align-items-center">
+            <h1 class="mb-4 text-center">PALINDROME CHECKER</h1>
+            <div class="mb-4">
+                <input class="form-control" id="input" type="text" placeholder="type a word">
+            </div>
+            <button class="btn btn-primary px-3 mb-4" onclick="check()">Check it</button>
+            <div id="result"></div>
+            </p>
+            <script src="/styles/palindrome.css"></script>
+        </div>
     </div>
 </body>
 
