Refactor quote generator: replace old file, update HTML structure, and implement event listener for quote generation

--- a/views/quotes.html
+++ b/views/quotes.html
@@ -34,12 +34,14 @@
     <div class="quotes">
         <div class="container d-flex flex-column align-items-center">
             <h1 class="mb-4 text-center">Quote Generator</h1>
-            <button class="btn btn-primary px-3 mb-4" onclick="generateQuote()">Generate Quote</button>
+            <button id="generateQuote" class="btn btn-primary px-3 mb-4">Generate
+                Quote</button>
             <p id="quote"></p>
+            <p id="author"></p>
             </p>
         </div>
     </div>
-    <script src="/js/quoteGenerator.js"></script>
+    <script type="module" src="/js/quoteGenerator.js"></script>
 </body>
 
 </html>
